--- a/app/assets/stylesheets/pages/_shared.scss
+++ b/app/assets/stylesheets/pages/_shared.scss
@@ -4,6 +4,6 @@ html, body {
 // body {
 //   padding-top: 60px; /*50px for the height of the navbar + 37px for the offset*/
 // }
-.add-navbar-padding {
-  padding-top: 60px;
-}
+// .add-navbar-padding {
+//   padding-top: 60px;
+// }
