--- a/app/views/tickets/_edit_form.html.erb
+++ b/app/views/tickets/_edit_form.html.erb
@@ -1,6 +1,10 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
-
+<!-- <div class="container"> -->
+   <div class="sign-up-container">
+    <div class="sign-up-text-container">
+      <h2 class='sign-up-text'>Upload a Profile Pic</h2>
+    </div>
     <div class="form-inputs">
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -10,7 +14,17 @@
       <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
     </div>
 
-    <div class="form-actions">
-      <%= f.button :submit, "Update" %>
-    </div>
-  <% end %>
+
+    <div class="form-row">
+      <div class="form-50">
+        <div class="form-actions" style="margin-left: 15px;">
+          <%= f.button :submit, "Update", class: "btn btn-primary" %>
+        </div>
+        <% end %>
+     </div>
+     </div>
+  <!-- </div> -->
+
+
+
+
