--- a/app/assets/stylesheets/components/_new_ticket_event.scss
+++ b/app/assets/stylesheets/components/_new_ticket_event.scss
@@ -27,7 +27,7 @@
 
 // Search bar for adding ticket to event
 .new-ticket-container {
-  padding: 50px 50px;
+  padding: 10px 10px;
   color: $black;
   a {
     color: $green;
@@ -57,4 +57,40 @@
   margin: 20px 10px;
   background-color: $white;
   background-size: cover;
+  max-height: 400px;
 }
+
+.event-card{
+  color:$green;
+  position: relative;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+}
+@media (min-width: 768px){
+  .event-card{
+  border-radius: 5px;
+  padding: 20px 40px;
+  margin: 20px 10px;
+  background-color: $white;
+  background-size: cover;
+  max-height: 400px;
+  }
+}
+@media (min-width: 320px) and (max-width: 767px) {
+  .event-card{
+  border-radius: 5px;
+  padding: 20px 10px;
+  margin: 20px 5px;
+  background-color: $white;
+  background-size: cover;
+  max-height: 400px;
+
+  }
+}
+.add-ticket-container{
+  text-align: right;
+}
+.font-size-12{
+  font-size: 12px;
+}
+
+
