styling on cards

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  transition: 1s background-color ease;
+  // transition: 1s background-color ease;
 }
 .navbar-wagon-black{
   background: #262626;
@@ -20,7 +20,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  transition: 1s background-color ease;
+  // transition: 1s background-color ease;
   text-decoration: none;
 }
 
