--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,7 +22,7 @@
             <%= link_to ticket_bookings_path(ticket.id), method: :post do %>
               <div class="ticket-container">
                 <div class="ticket-profile">
-                  <%= cl_image_tag current_user.photo, width: 80, height: 80, class: 'circle-avatar' %>
+                  <%= cl_image_tag ticket.user.photo, width: 80, height: 80, class: 'circle-avatar' %>
                 </div>
                 <div class="ticket-description">
                   <div class="ticket-link-to-show-page">
