--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,9 +46,9 @@
   <div class="cards-home-container">
     <div class="row">
       <% @categories.each do |category| %>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
           <%= link_to events_path(search_category: category) do %>
-            <div class="event-index-card-by-venue" style="background-image: url(<%= cl_image_path category_picture(category) %>)" ><%= category %></div>
+            <div class="event-index-card-by-venue" style="background-image: linear-gradient(-250deg, rgba(0,0,0,0.6) 31%, rgba(0,0,0,0.4) 85%), url(<%= cl_image_path category_picture(category) %>)" ><%= category %></div>
           <% end %>
         </div>
       <% end %>
