--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,5 +56,16 @@
   </div>
 </div>
 
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+  </div>
+  <div class="footer-copyright">
+    <i class="fa fa-heart"></i>
+    <span class='footer-text'>UniTix © Ben, Amresh, Cheryl 2018</span>
+  </div>
+</div>
 
  <%= javascript_pack_tag "typejs" %>
