--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding: 30px 30px;
   color: rgba(0,0,0,0.3);
-  min-height: 50px;
+  max-height: 50px;
   margin-top: 30px;
 }
 .footer-links {
