--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -23,24 +23,26 @@
         <% @events.each do |event| %>
         <div class="col-xs-12 col-md-6 col-lg-6">
           <div class="event-card" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.5) 50%), url(<%= cl_image_path(event.photo_file, crop: :fill, ) %>)">
-            <p><strong><%= event.name %></strong> @ <%= event.address %></p>
-            <p><%= event.date_and_time.strftime('%a %d %b %Y') %><%= link_to " (My event is on another date)", new_event_path(content: "hello"), class: 'font-size-12' %></p>
+            <div class="event-text">
+              <h4><strong><%= event.name %></strong> @ <%= event.city %></h4>
+              <h5><%= event.date_and_time.strftime('%a %d %b %Y') %><%= link_to " (My event is on another date)", new_event_path(content: "hello") %></h5>
 
-            <% if event.quantity == 0 %>
-              <p class='font-size-12'>Tickets for this event have sold out!</p>
-            <% elsif event.quantity == 1 %>
-              <p class='font-size-12'><%= event.quantity %> ticket is currently
-              listed, lowest from
-            <% ticket_price_array = [] %>
-              <% event.tickets.each do |ticket| %>
-            <% ticket_price_array << ticket.price %>
-            <% end %>
-            <% if ticket_price_array.count >= 1 && event.quantity != 0 %>
-            £<strong><%= ticket_price_array.min %></strong></p>
-            <% end %>
-            <% else %>
-            <p class='font-size-12'><%= event.quantity %> tickets are currently listed</p>
-            <% end %>
+              <% if event.quantity == 0 %>
+                <p>Tickets for this event have sold out!</p>
+              <% elsif event.quantity == 1 %>
+                <p><%= event.quantity %> ticket is currently
+                listed, lowest from
+              <% ticket_price_array = [] %>
+                <% event.tickets.each do |ticket| %>
+              <% ticket_price_array << ticket.price %>
+              <% end %>
+              <% if ticket_price_array.count >= 1 && event.quantity != 0 %>
+              £<strong><%= ticket_price_array.min %></strong></p>
+              <% end %>
+              <% else %>
+              <p><%= event.quantity %> tickets are currently listed</p>
+              <% end %>
+            </div>
 
             <%= render 'list_ticket_form', event: event, ticket: @ticket %>
           </div>
