--- a/app/assets/stylesheets/components/_ticket_listings.scss
+++ b/app/assets/stylesheets/components/_ticket_listings.scss
@@ -39,7 +39,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
-  align-items: center;
   padding: 5px 5px;
   border-bottom: 2px solid $black;
   background-color: $light-gray;
@@ -58,8 +57,15 @@
     color: $black;
   }
 }
-.container-upcoming-tickets{
-  margin: 20px 20px;
+@media (min-width: 923px){
+  .container-upcoming-tickets{
+    margin: 20px 20px;
+  }
+}
+@media (max-width: 923px){
+  .container-upcoming-tickets{
+    margin: 10px 2px;
+  }
 }
 .container-header-section{
   padding: 20px 10px;
