--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -18,7 +18,7 @@
       </ul>
     <% end %>
 
-    <div class="container" style=" padding-top: 30px">
+    <div class="container" style=" padding: 10px 0px 10px 0;">
       <%= render 'list_form', event: @event, ticket: @ticket %>
     </div>
   <% end %>
