--- a/app/assets/stylesheets/components/_dashboard_listings.scss
+++ b/app/assets/stylesheets/components/_dashboard_listings.scss
@@ -12,9 +12,9 @@
 
 @media (max-width: 767px)  {
   .dashboard-main-section{
-  max-width: 1000px;
-  margin: auto;
-  padding: 0 5px 0 5px;
+    max-width: 1000px;
+    margin: auto;
+    padding: 0 5px 0 5px;
   }
 }
 .container-header-section{
@@ -65,6 +65,7 @@
 }
 .container-upcoming-dashboards{
   margin-bottom: 20px;
+  margin-top: 60px;
   border: 0.5px solid #E7EAEC;
   background-color: #fffffe;
   position: relative;
@@ -145,15 +146,6 @@
 }
 .fa-heart{
   color: palevioletred;
-  cursor: pointer;
-  font-weight: 0;
-}
-.fa-heart:hover{
-  color: orangered;
-  transition: all .15s ease-in-out;
-  -ms-transform: scale(1.40);
-  -webkit-transform: scale(1.40);
-  transform: scale(1.40);
 }
 .fa-heart:visited{
   color: orangered;
@@ -223,6 +215,24 @@ button{
   width: 100px;
   height: 50px;
   position: relative;
+}
+.no-dashboard-info-container{
+  max-width: 1000px;
+  height: 80px;
+  margin: auto;
+  padding: 0 20px 0 20px;
+  text-align: center;
+  border-radius: 10px 10px 0 0;
+  margin-bottom: 20px;
+  margin-top: 60px;
+  border: 0.5px solid #E7EAEC;
+  background-color: #fffffe;
+  position: relative;
+  display: block;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  p {
+    margin-top: 30px;
+  }
 }
 
 
