--- a/app/assets/stylesheets/components/_event_listings.scss
+++ b/app/assets/stylesheets/components/_event_listings.scss
@@ -1,5 +1,5 @@
 .search-bar-query-container{
-  padding: 50px 0;
+  padding: 50px 10px;
 }
 .container-header-section{
   padding: 20px 10px;
@@ -108,7 +108,7 @@
 }
 .event-details{
   margin-top: 12px;
-  font-size: 16px;
+  font-size: 14px;
   color: #828282;
   overflow: hidden;
   max-height: 45px;
@@ -120,18 +120,6 @@
   display: table-cell;
   border-right: 0.5px solid #CFD4D9;
 }
-.fa-heart{
-  color: palevioletred;
-  cursor: pointer;
-}
-.fa-heart:hover{
-  color: orangered;
-  transition: all .15s ease-in-out;
-  -ms-transform: scale(1.40);
-  -webkit-transform: scale(1.40);
-  transform: scale(1.40);
-}
-
 .event-price{
   min-width: 80px;
   padding-right: 10px;
