--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
             <%= text_field_tag :search,
             params[:search],
             class: "form-control",
-              placeholder: "Discover what's hot in town"
+              placeholder: "Find out what's hot around Uni"
               %>
           </div>
         </p>
