--- a/app/views/tickets/_list_ticket_form.html.erb
+++ b/app/views/tickets/_list_ticket_form.html.erb
@@ -9,6 +9,6 @@
     </div>
   </div>
   <div class="add-ticket-container">
-    <%= t.submit "Add My Ticket", class: 'btn btn-primary' %>
+    <%= t.submit "List", class: 'btn btn-primary' %>
   </div>
 <% end %>
