--- a/app/assets/stylesheets/components/_event_listings.scss
+++ b/app/assets/stylesheets/components/_event_listings.scss
@@ -88,8 +88,8 @@
   vertical-align: top;
   width: 100%;
   display: table-cell;
-  /*  border-right: 0.5px solid #CFD4D9;*/
 }
+
 .event-description-container{
   vertical-align: top;
 }
@@ -106,6 +106,16 @@
     text-decoration: none;
   }
 }
+@media (min-width: 767px) {
+  .event-link-to-show-page{
+    font-size: 18px;
+  }
+}
+@media (max-width: 767px) {
+  .event-link-to-show-page{
+    font-size: 12px;
+  }
+}
 .event-details{
   margin-top: 12px;
   font-size: 14px;
@@ -113,6 +123,16 @@
   overflow: hidden;
   max-height: 45px;
   line-height: 15px;
+}
+@media (min-width: 767px) {
+  .event-details{
+    font-size: 14px;
+  }
+}
+@media (max-width: 767px) {
+  .event-details{
+    font-size: 10px;
+  }
 }
 .event-watch{
   vertical-align: top;
