--- a/app/assets/stylesheets/components/_ticket_listings.scss
+++ b/app/assets/stylesheets/components/_ticket_listings.scss
@@ -107,13 +107,27 @@
   border-right: 0.5px solid #CFD4D9;
   text-align: left;
 }
+@media (max-width: 767px){
+  #ticket_description{
+  height: 40px !important;
+}
+}
 .ticket-link-to-show-page{
   color: $green;
-  font-size: 18px;
   text-decoration: none;
   cursor: pointer;
   font-weight: bolder;
   margin: 5px 0;
+}
+@media (min-width: 768px){
+  .ticket-link-to-show-page{
+  font-size: 18px;
+}
+}
+@media (max-width: 767px){
+  .ticket-link-to-show-page{
+  font-size: 14px;
+}
 }
 .ticket-details{
   margin: 12px 0;
@@ -122,6 +136,11 @@
   overflow: hidden;
   max-height: 45px;
   line-height: 15px;
+}
+@media (max-width: 767px){
+  .ticket-details{
+  font-size: 10px;
+}
 }
 .ticket-price{
   min-width: 80px;
