search logic for new ticket listing

--- a/app/assets/stylesheets/components/_new_ticket_event.scss
+++ b/app/assets/stylesheets/components/_new_ticket_event.scss
@@ -9,8 +9,17 @@
   padding: 12px;
   border-top: 1px solid rgba(228, 228, 228, 0.6);
   cursor: pointer;
+  -webkit-transition: .2s;
   transition: .2s;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .aa-suggestion:hover, .aa-suggestion.aa-cursor {
@@ -18,12 +27,20 @@
   color: $white;
 }
 
-.aa-suggestion > span:first-child em, .aa-suggestion > span:last-child em {
+.aa-suggestion > span:first-child em, .aa-suggestion > span:last-child em{
   font-weight: 700;
   font-style: normal;
   color: $green;
   padding: 2px 0 2px 2px;
 }
+
+
+.aa-suggestion > span:last-child {
+  padding-left: 10px;
+  text-transform: uppercase;
+  color: $gray;
+}
+
 
 // Search bar for adding ticket to event
 .new-ticket-container {
