--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -18,6 +18,7 @@
     <h6><%= link_to "Can't Find Your Event?", new_event_path %></h6>
 
     <div class="search-results">
+      <% if @events != nil %>
       <div class="row">
         <% @events.each do |event| %>
         <div class="col-xs-12 col-md-6 col-lg-6">
@@ -48,6 +49,7 @@
         </div>
         <% end %>
       </div>
+      <% end %>
     </div>
     <% end %>
   </div>
