--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -1,11 +1,11 @@
 .dashboard-tabs {
   display: flex;
-  position: fixed -calc(20%);
+  // position: fixed -calc(20%);
   width: 100%;
   position: sticky;
   top: 60px;
   border-bottom: solid 1px $light-gray;
-  min-height: 80px;
+  height: 100px;
   z-index: 10;
 }
 .dashboard-tab-text{
@@ -45,4 +45,7 @@
 .dashboardtab.active {
   background: whitesmoke;
   color: black;
+}
+.dashboard-hidden {
+  display: none;
 }
