--- a/app/assets/stylesheets/components/_new_ticket_event.scss
+++ b/app/assets/stylesheets/components/_new_ticket_event.scss
@@ -27,7 +27,6 @@
 
 // Search bar for adding ticket to event
 .new-ticket-container {
-  padding: 50px 50px;
   color: $black;
   a {
     color: $green;
@@ -35,6 +34,16 @@
   a:hover {
     text-decoration: none;
     color: $light-green;
+  }
+}
+@media (min-width: 768px) {
+  .new-ticket-container{
+    padding: 50px 50px;
+  }
+}
+@media (max-width: 767px) {
+  .new-ticket-container{
+    padding: 40px 5px;
   }
 }
 
@@ -51,14 +60,6 @@
 }
 
 //search results cards
-.event-card {
-  border-radius: 5px;
-  padding: 20px 40px;
-  margin: 20px 10px;
-  background-color: $white;
-  background-size: cover;
-  max-height: 450px;
-}
 
 .event-card{
   color:$white;
@@ -71,11 +72,11 @@
 @media (min-width: 768px){
   .event-card{
   border-radius: 5px;
-  padding: 20px 40px;
+  padding: 20px 10px;
   margin: 20px 10px;
   background-color: $white;
   background-size: cover;
-  max-height: 400px;
+  max-height: 450px;
   }
 }
 @media (max-width: 767px) {
@@ -85,16 +86,34 @@
   margin: 20px 0px;
   background-color: $white;
   background-size: cover;
-  max-height: 400px;
+  max-height: 450px;
 
   }
 }
 .add-ticket-container{
   text-align: right;
   margin-right: 15px;
+  position: relative;
 }
 .event-text {
   margin: 15px 15px;
+}
+
+.form-group .file .required{
+  font-size: 10px !important;
+}
+.list-btn{
+  border-radius: 6px;
+  background-color: $green;
+  color: #FFF;
+  text-transform: uppercase;
+  width: 100px;
+  margin: 45px 0 0 auto;
+  right: 0px;
+  line-height: 30px;
+  font-size: 14px;
+  text-align: center;
+  position: absolute;
 }
 
 
