--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,8 +13,8 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Explore", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "List a Ticket", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Buy Tickets", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Help", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
@@ -65,8 +65,8 @@
 
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to "Explore", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
-       <%= link_to "List a Ticket", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Buy tickets", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
+       <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to "Help", about_path, class: "navbar-wagon-item navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
@@ -79,7 +79,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu" id="mobile-drop-down">
         <li>
-          <%= link_to "List a Ticket", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <% if user_signed_in? %>
          <li>
