--- a/app/views/events/_ticket_row.html.erb
+++ b/app/views/events/_ticket_row.html.erb
@@ -13,7 +13,7 @@
   <div class="ticket-price">
     <div class="price">
       <strong>£<%= ticket.price %></strong>
-        <i class="fas fa-shopping-cart"></i>
+        <i class="fas fa-shopping-cart", style='line-height: inherit;'></i>
     </div>
   </div>
 </div>
